--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,7 @@
   --secondary-font: 'Raleway', sans-serif;
   --third-font: 'Open Sans', sans-serif;
   --main-color: #ece8db;
+  --main-color-lighter: #ece8db73;
   --dark-color: #0d0d0d;
   --light-color: #f6f6f6;
   --spacing: 8px;
